--- a/src/visionlouisville/templates/visionlouisville/index.html
+++ b/src/visionlouisville/templates/visionlouisville/index.html
@@ -89,6 +89,7 @@
             <a href="#" class="user-menu-avatar"><img src="{{ user_data.avatar_url }}"></a>
             <ul class="user-menu unstyled-list">
               <li class="sub-menu-item"><a href="/users/{{ user_data.id }}" class="">My Profile</a></li>
+              <li class="sub-menu-item"><a href="#" class=""><span class="notifications-count">42</span> Notifications</a></li>
               <li class="sub-menu-item"><a href="{% url 'logout' %}" class="authentication-link authentication-link-logout">Sign out</a></li>
             </ul>
           </li>
