--- a/src/visionlouisville/static/css/styles.css
+++ b/src/visionlouisville/static/css/styles.css
@@ -1195,6 +1195,9 @@ ul.notifications-list {
   border-bottom: 1px solid rgba(0,0,0,0.1);
   border-top: 1px solid rgba(255,255,255,0.5);
 }
+.new-notification {
+  background-color: white;
+}
 a.notification-link {
   display: block;
   padding: 1em 1em 1em 4.75em;
