Use default values in template if no notifications are present

--- a/src/visionlouisville/templates/visionlouisville/index.html
+++ b/src/visionlouisville/templates/visionlouisville/index.html
@@ -118,14 +118,14 @@
   <script>
     var {{NS}} = {{NS}} || {};
     {{NS}}.currentUserData = {{ user_json|safe }};
-    {{NS}}.notificationsData = {{ notifications_json|safe }};
+    {{NS}}.notificationsData = {{ notifications_json|default:'null'|safe }};
     {{NS}}.staticURL = '{{ STATIC_URL|safe }}';
     {{NS}}.loginURL = '{% url "socialauth_begin" backend="twitter" %}';
     {{NS}}.twitterConf = {{ twitter_config|safe }};
     {{NS}}.categories = {{ categories|safe }};
     {{NS}}.appConfig = {{ app_json|safe }};
 
-    for (var i = 0; i < {{ num_notifications }}; ++i) {
+    for (var i = 0; i < {{ num_notifications|default:'0' }}; ++i) {
       {{NS}}.notificationsData[i]['is_new'] = true;
     }
   </script>
