--- a/src/hatch/static/css/styles.css
+++ b/src/hatch/static/css/styles.css
@@ -578,7 +578,7 @@ ul.user-menu:after {
   background-color: #d5d5c6;
   box-shadow: inset 0 3px 3px rgba(0,0,0,0.15);
 }
-.category-link {
+.twitter-link {
   float: right;
   padding: 0 10px;
   text-decoration: none;
