--- a/src/hatch/static/css/styles.css
+++ b/src/hatch/static/css/styles.css
@@ -48,6 +48,7 @@ a:hover, a:active { outline: none; }
 a, a:active, a:visited { color: #268099; }
 a:hover { color: #48a5bf; }
 p { margin: 0 0 1.2em; }
+p.small { margin: 0 0 2em; }
 ul, ol { margin-left: 1.8em; }
 ol { list-style-type: decimal; }
 ul, ol, dl { margin-bottom: 0.6em; }
@@ -82,6 +83,7 @@ hr {
 }
 .capitalize { text-transform:capitalize; }
 .meta-sep { opacity: 0.25; margin-right: 0.25em; margin-left: 0.25em; }
+.small { font-size: 80%; }
 
 a, button {
   -webkit-tap-highlight-color: rgba(0,0,0,0);
@@ -317,18 +319,29 @@ body {
 
 .overlay-content .swiper-slide {
   text-align: center;
-  padding: 1em 0;
   position: relative;
+}
+.swiper-slide-container {
+  padding: 1em;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 2em;
+  left: 0;
+  overflow: auto;
 }
 
 .overlay-content .pagination {
+  text-align: center;
   position: absolute;
   left: 0;
-  text-align: center;
-  bottom: 10px;
+  bottom: 0;
   width: 100%;
-  height:10px;
+  height: 2em;
+  line-height: 2em;
   z-index: 9999;
+  background-color: #d5d5c6;
+  border-radius: 0 0 5px 5px;
 }
 
 .swiper-pagination-switch {
@@ -346,20 +359,23 @@ body {
   background: #333;
 }
 
-.pagination-btn-prev,
-.pagination-btn-next {
-  position: absolute;
-  font-size: 4em;
-  top: 50%;
-  margin-top: -1em;
+.pagination-btn {
   cursor: pointer;
+  padding-bottom: 0.325em;
 }
-
 .pagination-btn-prev {
-  left: 5px;
 }
 .pagination-btn-next {
-  right: 5px;
+  padding-right: 1em;
+  padding-left: 1em;
+}
+.pagination-btn-icon {
+  font-size: 1.325em;
+  position: relative;
+  top: 0.1em;
+}
+.pagination-btn-prev .pagination-btn-icon {
+  top: 0.125em;
 }
 
 
