--- a/src/hatch/static/css/styles.css
+++ b/src/hatch/static/css/styles.css
@@ -308,9 +308,14 @@ body {
   position: relative;
   width: 100%;
   height: 100%;
-  box-shadow: 0 0 50px rgba(0,0,0,0.75);
-  background-color: #e7e7d7;
+  box-shadow: 0 0 5px rgba(0,0,0,0.125);
+  background-color: #444;
+  color: #fff;
   border-radius: 5px;
+}
+.overlay-content h1,
+.overlay-content p {
+  text-shadow: 0 1px 0.25em rgba(0,0,0,0.75);
 }
 
 .overlay-content .swiper-container {
@@ -329,6 +334,37 @@ body {
   bottom: 2em;
   left: 0;
   overflow: auto;
+}
+
+.swiper-background-image-container {
+  position: absolute;
+  top: auto;
+  right: auto;
+  bottom: 0;
+  left: 0;
+  border-radius: 0 0 8px 8px;
+  overflow: hidden;
+}
+.swiper-background-image {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+.swiper-background-gradient {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 25%;
+  left: 0;
+  background: #444;
+  background: rgba(68,68,68,1);
+  background: -moz-linear-gradient(top,  rgba(68,68,68,1) 20%, rgba(68,68,68,0) 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(20%,rgba(68,68,68,1)), color-stop(100%,rgba(68,68,68,0)));
+  background: -webkit-linear-gradient(top,  rgba(68,68,68,1) 20%,rgba(68,68,68,0) 100%);
+  background: -o-linear-gradient(top,  rgba(68,68,68,1) 20%,rgba(68,68,68,0) 100%);
+  background: -ms-linear-gradient(top,  rgba(68,68,68,1) 20%,rgba(68,68,68,0) 100%);
+  background: linear-gradient(to bottom,  rgba(68,68,68,1) 20%,rgba(68,68,68,0) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#444444', endColorstr='#00444444',GradientType=0 );
 }
 
 .overlay-content .pagination {
@@ -1326,4 +1362,14 @@ a.notification-link {
 }
 
 @media only screen and (min-width: 1300px) {
+}
+
+@media only screen and (min-height: 600px) {
+  .overlay {
+    font-size: 1.125em;
+    line-height: 1.5;
+  }
+  .swiper-slide-container {
+    padding-top: 3em;
+  }
 }
